some basic arch

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.css">
+        <link rel="stylesheet" href="css/iamucla-sso.css">
 
         <script src="js/modernizr.custom.20284.js"></script>
     </head>
@@ -16,7 +16,6 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="h5f.min.js"></script>
-        h5f.min.js
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
 
         <script src="js/main.js"></script>
