--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
-<!DOCTYPE html>
-<html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.css">
-        <link rel="stylesheet" href="css/iamucla-sso.css">
-
-        <script src="js/modernizr.custom.20284.js"></script>
-    </head>
-    <body>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="h5f.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-
-        <script src="js/main.js"></script>
-    </body>
-</html>
+	<form id="sso">
+		
+		<fieldset>
+			<legend>Sign in with your UCLA Logon ID</legend>
+			<ol>
+				<li>
+					<label for="logon">UCLA Logon ID</label>
+					<input id="logon" name="logon" type="text" placeholder="UCLA Logon ID Account Name" required autofocus>
+				</li>
+				<li>
+					<label for="pass">Password</label>
+					<input id="pass" "pass" type="text" placeholder="Your UCLA Logon ID Password" required>
+				</li>
+			</ol>
+		</fieldset>
+	
+		<fieldset>
+			<button type="submit">Sign In</button>
+		</fieldset>
+		
+	</form>
