--- a/_pages/ucla-logon/index.html
+++ b/_pages/ucla-logon/index.html
@@ -9,11 +9,11 @@ layout: ucla-logon
 		<ol>
 			<li>
 				<label for="logon">UCLA Logon ID</label>
-				<input id="logon" name="logon" type="text" placeholder="UCLA Logon ID Account Name" required autofocus>
+				<input id="logon" name="logon" type="text" placeholder="UCLA Logon ID" aria-required="true" required autofocus>
 			</li>
 			<li>
 				<label for="pass">Password</label>
-				<input id="pass" "pass" type="text" placeholder="Your UCLA Logon ID Password" required>
+				<input id="pass" "pass" type="text" placeholder="Your UCLA Logon ID Password" aria-required="true" required>
 			</li>
 		</ol>
 	</fieldset>
