add in fonts, some structure, etc

--- a/index.html
+++ b/index.html
@@ -2,4 +2,14 @@
 layout: ucla-logon
 ---
 
-<h1>List of current pages</h1>
+<h1>Pages:</h1>
+
+<h2>UCLA Logon ID</h2>
+<ul>
+	<li><a href="/ucla-logon">UCLA Logon ID page</a></li>
+</ul>
+
+<h2>Med Center ID</h2>
+<ul>
+	<li>Coming Soon</li>
+</ul>
