a bit more common styles

--- a/_pages/ucla-logon/index.html
+++ b/_pages/ucla-logon/index.html
@@ -8,12 +8,12 @@ layout: ucla-logon
 		<legend>Sign in with your UCLA Logon ID</legend>
 		<ol>
 			<li>
-				<label for="logon">UCLA Logon ID</label>
-				<input id="logon" name="logon" type="text" placeholder="UCLA Logon ID" aria-required="true" required autofocus>
+				<label for="logon">UCLA Logon Account</label>
+				<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon Account" aria-required="true" required autofocus>
 			</li>
 			<li>
 				<label for="pass">Password</label>
-				<input id="pass" "pass" type="text" placeholder="Your UCLA Logon ID Password" aria-required="true" required>
+				<input id="pass" "pass" type="text" placeholder="Your UCLA Logon Password" aria-required="true" required>
 			</li>
 		</ol>
 	</fieldset>
