styling for initial logon page

--- a/_pages/ucla-logon/index.html
+++ b/_pages/ucla-logon/index.html
@@ -8,7 +8,7 @@ layout: ucla-logon
 		<legend>Sign in with your UCLA Logon ID</legend>
 		<ol>
 			<li>
-				<label for="logon">UCLA Logon Account</label>
+				<label for="logon">Account</label>
 				<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon Account" aria-required="true" required autofocus>
 			</li>
 			<li>
@@ -19,7 +19,7 @@ layout: ucla-logon
 	</fieldset>
 
 	<fieldset>
-		<button type="submit">Sign In</button>
+		<button class="primary" type="submit">Sign In</button>
 	</fieldset>
 	
 </form>
