initial med center + update

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ layout: ucla-logon
 <h2>UCLA Logon ID</h2>
 <ul>
 	<li><a href="/ucla-logon">UCLA Logon ID page</a></li>
+	<li><a href="/ucla-logon/with-medcenter.html">UCLA Logon ID page w/ med center option</a></li>
+	<li><a href="/ucla-logon/with-update.html">UCLA Logon ID page w/ update</a></li>
+	<li><a href="/ucla-logon/with-medcenter+update.html">UCLA Logon ID page w/ med center option & update</a></li>
 </ul>
 
 <h2>Med Center ID</h2>
