--- a/_pages/ucla-logon/policies.html
+++ b/_pages/ucla-logon/policies.html
@@ -1,7 +1,8 @@
 ---
 layout: ucla-logon
 ---
-
+<article>
+	
 <h1>Privacy, Security &amp; Legal</h1>
 
 <p>These sites are owned by The Regents of the University of California and operated by UCLA. UCLA encourages the use of these sites as a way to share information and knowledge in support of the University's three-part mission of education, research and public service. Site content is subject to change without notice. While most sites are publicly accessible, certain services and information offered online may be restricted to specific users or segments of the UCLA population.</p>
@@ -44,3 +45,5 @@ layout: ucla-logon
 	<li><a href="http://www.ucla.edu/terms.html">Terms of Use for UCLA Web Sites and Applications</a></li>
 	<li><a href="http://www.adminpolicies.ucla.edu/">UCLA Administrative Policies &amp; Procedures</a></li>
 </ul>
+
+</article>
