--- a/_pages/ucla-logon/with-update.html
+++ b/_pages/ucla-logon/with-update.html
@@ -3,3 +3,13 @@ layout: ucla-logon
 ---
 
 {% include ucla-sso-form.html %}
+
+<aside class="update">
+	<h3>Sign In to "Common Collaboration and Learning Environment (CCLE)"</h3>
+	
+	<ul>
+		<li><a href="https://ccle.ucla.edu/login/ucla_login.php?loginguest=1">Guest Access</a> - access to publicly viewable sites</li>
+		<li><a href="https://ccle.ucla.edu/login/ucla_login.php">Special Case Login</a> - only if you have been assigned a special case ID</li>
+		<li>Getting an error after a successful login? Your Logon ID might <a href="http://kb.ucla.edu/articles/moodle-needs-certain-shibboleth-attributes">not be working properly.</a></li>
+	</ul>
+</aside>
