consolidate header, initial style sp news bits

--- a/_pages/ucla-logon/with-update.html
+++ b/_pages/ucla-logon/with-update.html
@@ -4,12 +4,10 @@ layout: ucla-logon
 
 {% include ucla-sso-form.html %}
 
-<aside class="update">
-	<h3>Sign In to "Common Collaboration and Learning Environment (CCLE)"</h3>
+<aside class="sp-news">
+	<h3>About Signing in to CCLE</h3>
 	
-	<ul>
-		<li><a href="https://ccle.ucla.edu/login/ucla_login.php?loginguest=1">Guest Access</a> - access to publicly viewable sites</li>
-		<li><a href="https://ccle.ucla.edu/login/ucla_login.php">Special Case Login</a> - only if you have been assigned a special case ID</li>
-		<li>Getting an error after a successful login? Your Logon ID might <a href="http://kb.ucla.edu/articles/moodle-needs-certain-shibboleth-attributes">not be working properly.</a></li>
-	</ul>
+	<p>You can also use <a href="https://ccle.ucla.edu/login/ucla_login.php?loginguest=1">Guest Access</a> to visit publicly viewable sites or a <a href="https://ccle.ucla.edu/login/ucla_login.php">Special Case Login</a> if you have been assigned a special case ID.</p>
+	
+	 <p>If you're getting an error after a successful login your Logon ID might <a href="http://kb.ucla.edu/articles/moodle-needs-certain-shibboleth-attributes">not be working properly.</a></p>
 </aside>
