more error stuff + some variable/structure abstraction

--- a/_medcenter-mocks/tba.html
+++ b/_medcenter-mocks/tba.html
@@ -2,24 +2,4 @@
 title: TBA
 ---
 
-<form id="sso">
-	
-	<fieldset>
-		<legend>Sign in with your UCLA Logon ID</legend>
-		<ol>
-			<li>
-				<label for="logon">UCLA Logon ID</label>
-				<input id="logon" name="logon" type="text" placeholder="UCLA Logon ID Account Name" required autofocus>
-			</li>
-			<li>
-				<label for="pass">Password</label>
-				<input id="pass" "pass" type="text" placeholder="Your UCLA Logon ID Password" required>
-			</li>
-		</ol>
-	</fieldset>
-
-	<fieldset>
-		<button type="submit">Sign In</button>
-	</fieldset>
-	
-</form>
+<h1><a href="/.">go back</a></h1>
