--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: ucla-logon
 ---
 
-<h1>Pages:</h1>
+<h1>Mockup screens for logging in...</h1>
 
-<h2>UCLA Logon ID</h2>
+<h2>w/ UCLA Logon ID</h2>
 
 <ul>
   {% for collection in site.ucla-logon-mocks %}
@@ -14,10 +14,20 @@ layout: ucla-logon
   {% endfor %}
 </ul>
 
-<h2>Med Center ID</h2>
+<h2>w/ Med Center ID</h2>
 
 <ul>
   {% for collection in site.medcenter-mocks %}
+    <li>
+      <a href="{{ site.baseurl }}{{ collection.url }}">{{ collection.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
+
+<h2>As an Application </h2>
+
+<ul>
+  {% for collection in site.as-app-mocks %}
     <li>
       <a href="{{ site.baseurl }}{{ collection.url }}">{{ collection.title }}</a>
     </li>
