more error tweaks

--- a/_ucla-logon-mocks/warning-slowdown.html
+++ b/_ucla-logon-mocks/warning-slowdown.html
@@ -8,7 +8,7 @@ title: Warning, Login Attempts Slowed
 
 	<p>We've noticed that there have been more than a few login attempts on this account recently. In order to protect your identity from someone trying to force their way into your account we've added a wait between login attempts. Or maybe it's just been a while and you've forgotten your password - hey it happens to the best of us.</p>
 	
-	<p>The simplest thing to do is to <a href="#">go request a password reset</a>. Of course you can just keep on trying if you really want to!</p>
+	<p>The simplest thing to do is to <a href="#">go request a password reset</a>. Of course you can just wait a bit and keep on trying if you really want to!</p>
 
 </div>
 
