+ transitions, - semibold font, rough report form

--- a/_ucla-logon-mocks/error-bookmarked-login.html
+++ b/_ucla-logon-mocks/error-bookmarked-login.html
@@ -6,7 +6,7 @@ title: Auth "error" - Bookmarked Login
 	
 	<h1>Don't bookmark this page!</h1>
 	
-	<p>You can't bookmark the login page - <strong>bookmark the application you want to get to</strong>. Type where you were trying to get to in the address bar of your browser, or read on if you want to know why. </p>
+	<p>You can not bookmark the login page - <strong>bookmark the application you want to get to</strong>. Type where you were trying to get to in the address bar of your browser or read on if you want to know why. </p>
 				
 	<p>It makes sense - you want to log in, so you bookmark the login page. Boom. Done. It's a little trickier than that though.</p>
 	
