--- a/_ucla-logon-mocks/fatal-error-contact-sp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-sp.html
@@ -10,8 +10,8 @@ title: Fatal Error - Contact SP
 
 <article role="status">
 	
-	<p>There's something wrong with Bansky Wallpaper's login server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">Banksy Lab</a></strong> so they can fix it faster.</p>
-		
-	<p>oij2305u0392iroe</p>
+	<p>There's something wrong with Bansky Wallpaper's server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">Banksy Lab</a></strong> so they can fix it faster.</p>
+	
+	{% include fatal-report-form.html %}
 
 </article>
