wording changes, quick login fail

--- a/_ucla-logon-mocks/error-bookmarked-login.html
+++ b/_ucla-logon-mocks/error-bookmarked-login.html
@@ -6,11 +6,11 @@ title: Auth "error" - Bookmarked Login
 	
 	<h1>Don't bookmark this page!</h1>
 	
-	<p>You can not bookmark the login page - <strong>bookmark the application you want to get to</strong>. Type where you were trying to get to in the address bar of your browser or read on if you want to know why. </p>
+	<p>You can not bookmark the login page - <strong>bookmark the site you want to get to</strong>. Type where you were trying to get to in the address bar of your browser or read on if you want to know why. </p>
 				
 	<p>It makes sense - you want to log in, so you bookmark the login page. Boom. Done. It's a little trickier than that though.</p>
 	
-	<p>The upside of using your UCLA Logon ID is that you don't have to remember dozens of UCLA passwords and can even log into universities around the country to collaborate.  Once you're logged in during a browser session you're good to go for anything the UCLA Logon ID works with, they'll automatically know who you are. The downside is that all this fancyness is a multi-step process. It's like baking, you have to make the dough (go to an application and trigger a login), then bake the cookies (complete that login which will then redirect you back to the application). You want cookies, so you're standing in front of the oven - but there's no dough to put in.</p>
+	<p>The upside of using your UCLA Logon ID is that you don't have to remember dozens of UCLA passwords and can even log into universities around the country to collaborate.  Once you're logged in during a browser session you're good to go for anything the UCLA Logon ID works with, they'll automatically know who you are. The downside is that all this fancyness is a multi-step process. It's like baking, you have to make the dough (go to a site and trigger a login), then bake the cookies (complete that login which will then redirect you back to the site). You want cookies, so you're standing in front of the oven - but there's no dough to put in.</p>
 	
 	<p>Are you hungry now too?</p>
 
