--- a/_ucla-logon-mocks/fatal-error-contact-sp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-sp.html
@@ -4,7 +4,7 @@ title: Fatal Error - Contact SP
 
 <div role="alert">
 
-	<h1>Something is wrong with the application you're logging into. Let's fix that.</h1>
+	<h1>Something is wrong with the site you're logging into. Let's fix that.</h1>
 
 </div>
 
