--- a/_ucla-logon-mocks/logon-base-with-medcenter+update.html
+++ b/_ucla-logon-mocks/logon-base-with-medcenter+update.html
@@ -1,5 +1,5 @@
 ---
-title: Logon Base Page w/ Medcenter Login & SP News
+title: Logon Form w/ Medcenter Login & SP News
 ---
 
 {% include ucla-sso-form.html %}
