--- a/_ucla-logon-mocks/signon-success.html
+++ b/_ucla-logon-mocks/signon-success.html
@@ -5,7 +5,7 @@ title: Successful Sign-On
 <article>
 	<h1>You Have Successfully Signed In</h1>
 	
-	<p>spinner icon / is this still relevant? could do a custom FA build</p>
+	<p>[[ spinner icon via custom FA build? ]]</p>
 	
-	<p>It might take a few seconds to redirect you to the requested site. Hang in there!</p>
+	<p>It might take a few seconds to redirect you to the site you're logging into. Hang in there!</p>
 </article>
