--- a/_ucla-logon-mocks/fatal-error-contact-sp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-sp.html
@@ -10,7 +10,7 @@ title: Fatal Error - Contact SP
 
 <article role="status">
 	
-	<p>There's something wrong with Bansky Wallpaper's server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">Banksy Lab</a></strong> so they can fix it faster.</p>
+	<p>There's something wrong with Bansky Wallpaper's server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">Banksy Lab</a></strong> so they can fix it.</p>
 	
 	{% include fatal-report-form.html %}
 
