more semantics, some spacing tweaks

--- a/_ucla-logon-mocks/alert-bookmarked-login.html
+++ b/_ucla-logon-mocks/alert-bookmarked-login.html
@@ -1,8 +1,8 @@
 ---
-title: Auth "error" - Bookmarked Login
+title: Alert - Bookmarked Login
 ---
 
-<div role="status" class="warning">
+<div role="alert" class="alert">
 	
 	<h1>Don't bookmark this page!</h1>
 	
