--- a/_ucla-logon-mocks/alert-timeout.html
+++ b/_ucla-logon-mocks/alert-timeout.html
@@ -1,8 +1,8 @@
 ---
-title: Auth "error" - Timeout
+title: Alert - Timeout
 ---
 
-<div role="status" class="warning">
+<div role="alert" class="alert">
 	
 	<h1>Your login session ran out of time</h1>
 	
