--- a/_ucla-logon-mocks/error-logon-fail.html
+++ b/_ucla-logon-mocks/error-logon-fail.html
@@ -1,8 +1,8 @@
 ---
-title: Logon Form w/ Failed Login
+title: Error - Logon Form w/ Failed Login
 ---
 
-<div role="alert">
+<div role="alert" class="error">
 
 	<h1>Wrong Logon ID and/or Password</h1>
 	
