--- a/_ucla-logon-mocks/fatal-error-contact-idp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-idp.html
@@ -2,15 +2,15 @@
 title: Fatal Error - Contact IdP
 ---
 
-<div role="alert">
-
+<div role="alert" class="error">
+	
 	<h1>The login server isn't working correctly. Let someone know.</h1>
 
 </div>
 
 <article role="status">
 	
-	<p>There's something wrong with the UCLA Login Server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">ITS</a></strong> so they can fix it faster.</p>
+	<p>There's something wrong with the UCLA Login Server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">ITS</a></strong>.</p>
 	
 	{% include fatal-report-form.html %}
 
