--- a/_ucla-logon-mocks/warning-slowdown.html
+++ b/_ucla-logon-mocks/warning-slowdown.html
@@ -2,7 +2,7 @@
 title: Warning, Login Attempts Slowed
 ---
 
-<div role="alert">
+<div role="alert" class="error">
 
 	<h1>Login Attempts Slowed Down</h1>
 
