totally not making it

--- a/_ucla-logon-mocks/http-404.html
+++ b/_ucla-logon-mocks/http-404.html
@@ -6,12 +6,14 @@ title: HTTP 404
 
 	<h1>404 (not found)</h1>
 	
-	<p>You expected something to be here, and it wasn't. Don't you hate that?</p>
+	<p>You expected something to be here, and it wasn't.</p>
+	
+	<p>Don't you hate that?</p>
 
 </div>
 
 <article>
 	
-	<p>You either got here through a broken link, or mistyped where you trying to go in the address bar. Double check!</p>
+	<p>You either got here through a broken link, or mistyped where you trying to go in the address bar. Double check what you typed, or if you're sure it's a broken link let someone know.</p>
 	
 </article>
