--- a/_ucla-logon-mocks/http-500.html
+++ b/_ucla-logon-mocks/http-500.html
@@ -6,12 +6,12 @@ title: HTTP 500
 
 	<h1>500 (internal server error)</h1>
 	
-	<p>Something, internal, on a server, is in error.</p>
+	<p>Something, internal, on a server, is in a state of error.</p>
 
 </div>
 
 <article>
 	
-	<p>Yeah, it's vague. Something is broken, and people are working to fix it. Check back in a bit!</p>
+	<p>Yeah, it's vague. Basically something is broken, and people are working to fix it. Check back in a bit!</p>
 	
 </article>
