fix logo going back to list of pages on gh

--- a/_ucla-logon-mocks/http-404.html
+++ b/_ucla-logon-mocks/http-404.html
@@ -14,6 +14,6 @@ title: HTTP 404
 
 <article>
 	
-	<p>You either got here through a broken link, or mistyped where you trying to go in the address bar. Double check what you typed, or if you're sure it's a broken link let someone know.</p>
+	<p>You either got here through a broken link, or mistyped where you were trying to go in the address bar. Double check what you typed, or if you're sure it's a broken link let someone know.</p>
 	
 </article>
