dev font-awesome, logo change

--- a/_ucla-logon-mocks/signon-success.html
+++ b/_ucla-logon-mocks/signon-success.html
@@ -5,7 +5,7 @@ title: Successful Sign-On
 <article>
 	<h1>You Have Successfully Signed In</h1>
 	
-	<p>[[ spinner icon via custom FA build? ]]</p>
+	<p class="loading"><i class="fa fa-circle-o-notch fa-spin"></i></p>
 	
 	<p>It might take a few seconds to redirect you to the site you're logging into. Hang in there!</p>
 </article>
