new alerts, wording tweaks

--- a/_ucla-logon-mocks/http-401.html
+++ b/_ucla-logon-mocks/http-401.html
@@ -12,9 +12,6 @@ title: HTTP 401
 
 <article>
 	
-	<p>Try logging in with a new browser, or closing and re-opening this one. If the issue persists feel free to ping someone.</p>
+		<p>Try logging in with a new browser, or closing and re-opening this one. If the issue persists feel free to <a href="help.html">contact someone</a>.</p>
 	
 </article>
-
-
- 
