--- a/_ucla-logon-mocks/http-403.html
+++ b/_ucla-logon-mocks/http-403.html
@@ -12,6 +12,6 @@ title: HTTP 403
 
 <article>
 	
-	<p>Either sign-in (that's what we're here for), or try heading somewhere a bit less dusty.</p>
+	<p>Either sign-in (that's what we're here for), or try heading somewhere on the beaten track.</p>
 	
 </article>
