--- a/_ucla-logon-mocks/http-400.html
+++ b/_ucla-logon-mocks/http-400.html
@@ -12,7 +12,6 @@ title: HTTP 400
 
 <article>
 	
-		<p>Try logging in with a new browser, or closing and re-opening this one. If the issue persists feel free to ping someone.</p>
+		<p>Try logging in with a new browser, or closing and re-opening this one. If the issue persists feel free to <a href="help.html">contact someone</a>.</p>
 	
 </article>
-
