more brandingish pattern for logon + sp info

--- a/_ucla-logon-mocks/faq.html
+++ b/_ucla-logon-mocks/faq.html
@@ -1,5 +1,5 @@
 ---
-title: Help
+title: FAQ
 ---
 
 <article>
@@ -11,7 +11,6 @@ title: Help
 	
 	<ul>
 			<li><a href="https://logon.ucla.edu/activate.php">I don't have a UCLA Logon ID. I need one.</a></li>
-			<li><a href="https://logon.ucla.edu/userlookup.php">I don't know if I have a UCLA Logon ID.</a></li>
 			<li><a href="https://logon.ucla.edu/passreset.php">I can't remember my password.</a></li>
 	</ul>
 	
@@ -19,16 +18,5 @@ title: Help
 	
 	<p>If you've had trouble signing in with your UCLA Logon ID, try reopening your browser and signing in again.</p>
 	<p>If you continue to experience problems with your UCLA Logon ID account, or have questions about your UCLA Logon ID account, please contact the Bruin Online Help Desk at (310) 26<strong>7-HELP</strong> (4357).</p>
-
-<!-- customize header with Application Name -->
-
-	<h2>Have a question about this application?</h2>
-	<!-- customize Help Desk contact info for application being accessed --> 
-	<p>Applications often have separate support desks specializing in answering application-specific questions. For questions about this application, contact:</p>
-	
-	<ul>
-	   <li><strong>Name:</strong> IAMUCLA Support </li>
-	   <li><strong>Email:</strong> iamucla@ucla.edu</li>
-	 </ul>
 
 </article>
