--- a/_ucla-logon-mocks/index.html
+++ b/_ucla-logon-mocks/index.html
@@ -3,3 +3,10 @@ title: Logon Form
 ---
 
 {% include ucla-sso-form.html %}
+
+<aside class="sp-news">
+	<h3>Lambda Lab</h3>
+	
+	<p>If you're having issues with Lambda Lab in particular, you can email them at <a href="#">foobar@ucla.edu</a> or give them a call at (310) 208-0448.</p>
+		
+</aside>
