push for quick review

--- a/_ucla-logon-mocks/index.html
+++ b/_ucla-logon-mocks/index.html
@@ -7,6 +7,6 @@ title: Logon Form
 <aside class="sp-news">
 	<h3>Lambda Lab</h3>
 	
-	<p>If you're having issues with Lambda Lab in particular, you can email them at <a href="#">foobar@ucla.edu</a> or give them a call at (310) 208-0448.</p>
+	<p>If you're having issues with signing into Lambda Lab in particular, you can email them at <a href="#">foobar@ucla.edu</a> or give them a call at (310) 208-0448.</p>
 		
 </aside>
