--- a/_ucla-logon-mocks/logon-base-with-custom-sp.html
+++ b/_ucla-logon-mocks/logon-base-with-custom-sp.html
@@ -5,7 +5,7 @@ title: Logon Form w/ Custom SP News
 {% include ucla-sso-form.html %}
 
 <aside class="sp-news">
-	<h3>CCLE</h3>
+	<h3>Common Collaboration & Learning Environment</h3>
 	
 	<p>You can also use <a href="https://ccle.ucla.edu/login/ucla_login.php?loginguest=1">Guest Access</a> to visit publicly viewable sites or a <a href="https://ccle.ucla.edu/login/ucla_login.php">Special Case Login</a> if you have been assigned a special case ID.</p>
 	
