--- a/_ucla-logon-mocks/logon-base-with-custom-sp.html
+++ b/_ucla-logon-mocks/logon-base-with-custom-sp.html
@@ -2,4 +2,12 @@
 title: Logon Form w/ Custom SP News
 ---
 
-{% include ucla-sso-form-custom-sp.html %}
+{% include ucla-sso-form.html %}
+
+	<aside class="sp-news">
+		<h3>Common Collaboration & Learning Environment</h3>
+		
+		<p>You can use <a href="https://ccle.ucla.edu/login/ucla_login.php?loginguest=1">Guest Access</a> to visit publicly viewable sites or a <a href="https://ccle.ucla.edu/login/ucla_login.php">Special Case Login</a> if you have been assigned a special case ID.</p>
+		
+		 <p>If you're getting an error after a successful login your Logon ID might <a href="http://kb.ucla.edu/articles/moodle-needs-certain-shibboleth-attributes">not be working properly.</a></p>
+	</aside>
