--- a/_ucla-logon-mocks/alert-logon-fail.html
+++ b/_ucla-logon-mocks/alert-logon-fail.html
@@ -6,7 +6,7 @@ title: Alert - Logon Form w/ Failed Login
 
 	<h1>Wrong Logon ID and/or Password</h1>
 	
-	<p>Try again or <a href="#">go reset your password</a> if you've forgotten it. FYI - eventually there will be a waiting period between attempts.</p>
+	<p>Try again or <a href="#">go reset your password</a> if you've forgotten it. Repeated failed logins will eventually lead to a waiting period between attempts.</p>
 
 </div>
 
