--- a/_ucla-logon-mocks/alert-logon-fail.html
+++ b/_ucla-logon-mocks/alert-logon-fail.html
@@ -2,12 +2,4 @@
 title: Alert - Logon Form w/ Failed Login
 ---
 
-<div role="alert" class="alert">
-
-	<h1>Wrong Logon ID and/or Password</h1>
-	
-	<p>Try again or <a href="#">go reset your password</a> if you've forgotten it. Repeated failed logins will eventually lead to a waiting period between attempts.</p>
-
-</div>
-
-{% include ucla-sso-form.html %}
+{% include ucla-sso-form-fail.html %}
