--- a/_ucla-logon-mocks/alert-bookmarked-login.html
+++ b/_ucla-logon-mocks/alert-bookmarked-login.html
@@ -2,10 +2,14 @@
 title: Alert - Bookmarked Login
 ---
 
-<div role="alert" class="alert">
+
+
+<article role="alert">
+	
+	<div class="badge-alert"><span>Alert</span></div>
 	
 	<h1>Don't bookmark this page!</h1>
 	
 	<p>You can not bookmark the sign-in page - <strong>bookmark the site you want to get to</strong> and then sign in from there. UCLA Single-Sign On is a multi-step process, and you can't just skip to the middle of it. Good initiative though!</p>
 	
-</div>
+</article>
