--- a/_ucla-logon-mocks/alert-retry.html
+++ b/_ucla-logon-mocks/alert-retry.html
@@ -2,24 +2,22 @@
 title: Alert - Retry Sign-on Process
 ---
 
-<div role="alert" class="alert">
+<article role="alert">
+	
+	<div class="badge-alert"><span>Alert</span></div>
 	
 	<h1>Retry the sign-in process</h1>
 	
 	<p>It looks like there might have been a hiccup in the system.</p>
-
-</div>
-
-<article>
 	
-<h2>Try the following steps</h2>
-
-<ol>
-	<li>Try logging back in from the application you started from.</li>
-	<li>If that doesn't work, try using a different browser. You could also close and re-open the one you're using.</li>
-	<li>Wait a little and try again.</li>
-	<li>If you're still getting an error, contact the help desk.</li>
-</ol>
+	<h2>Try the following steps</h2>
+	
+	<ol>
+		<li>Try logging back in from the application you started from.</li>
+		<li>If that doesn't work, try using a different browser. You could also close and re-open the one you're using.</li>
+		<li>Wait a little and try again.</li>
+		<li>If you're still getting an error, contact the help desk.</li>
+	</ol>
 
 </article>
 
