--- a/_ucla-logon-mocks/alert-timeout.html
+++ b/_ucla-logon-mocks/alert-timeout.html
@@ -2,12 +2,14 @@
 title: Alert - Timeout
 ---
 
-<div role="alert" class="alert">
+<article role="alert">
 	
-	<h1>Your login session ran out of time</h1>
+	<div class="badge-alert"><span>Alert</span></div>
+	
+	<h1>Your session ran out of time</h1>
 	
 	<p>You waited just a <em>little</em> too long to start logging in. I'm sure that was a great cup of coffee though.</p>
 	
 	<p>Hey, it's not a problem! Just <a href="{{site.baseurl}}/ucla-logon-mocks/">go and login</a> a little faster this time.</p>
 
-</div>
+</article>
