--- a/_ucla-logon-mocks/fatal-error-contact-idp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-idp.html
@@ -2,13 +2,11 @@
 title: Fatal Error - Contact IdP
 ---
 
-<div role="alert" class="error">
+<article role="status">
+	
+	<div class="badge-error"><span>Error</span></div>
 	
 	<h1>The login server isn't working correctly. Let someone know.</h1>
-
-</div>
-
-<article role="status">
 	
 	<p>There's something wrong with the UCLA Login Server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">ITS</a></strong>.</p>
 	
