--- a/_ucla-logon-mocks/fatal-error-contact-sp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-sp.html
@@ -2,13 +2,11 @@
 title: Fatal Error - Contact SP
 ---
 
-<div role="alert" class="error">
+<article role="status">
+	
+	<div class="badge-error"><span>Error</span></div>
 
 	<h1>Something is wrong with the site you're logging into. Let's fix that.</h1>
-
-</div>
-
-<article role="status">
 	
 	<p>There's something wrong with Bansky Wallpaper's server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">Banksy Lab</a></strong>.</p>
 	
