--- a/_ucla-logon-mocks/fatal-error-contact-idp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-idp.html
@@ -4,7 +4,7 @@ title: Fatal Error - Contact IdP
 
 <article role="status">
 	
-	<div class="badge-error"><span>Error</span></div>
+	<div class="badge-error"><i class="fa fa-wrench"></i></div>
 	
 	<h1>The login server isn't working correctly. Let someone know.</h1>
 	
