--- a/_ucla-logon-mocks/fatal-error-contact-sp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-sp.html
@@ -4,9 +4,9 @@ title: Fatal Error - Contact SP
 
 <article role="status">
 	
-	<div class="badge-error"><span>Error</span></div>
+	<div class="badge-error"><i class="fa fa-wrench"></i></div>
 
-	<h1>Something is wrong with the site you're logging into. Let's fix that.</h1>
+	<h1>The site you're logging into is broken. Let's fix that.</h1>
 	
 	<p>There's something wrong with Bansky Wallpaper's server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">Banksy Lab</a></strong>.</p>
 	
