--- a/_ucla-logon-mocks/alert-retry.html
+++ b/_ucla-logon-mocks/alert-retry.html
@@ -4,7 +4,7 @@ title: Alert - Retry Sign-on Process
 
 <article role="alert">
 	
-	<div class="badge-alert"><span>Alert</span></div>
+	<div class="badge-alert"><i class="fa fa-exclamation-triangle"></i></div>
 	
 	<h1>Retry the sign-in process</h1>
 	
