--- a/_ucla-logon-mocks/fatal-error-contact-sp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-sp.html
@@ -4,7 +4,7 @@ title: Fatal Error - Contact SP
 
 <article role="status">
 	
-	<div class="badge-error"><i class="fa fa-wrench"></i></div>
+	<div class="badge-error"><i class="fa fa-minus-circle"></i></div>
 
 	<h1>The site you're logging into is broken. Let's fix that.</h1>
 	
