sp support styling/content

--- a/_ucla-logon-mocks/fatal-error-contact-sp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-sp.html
@@ -8,7 +8,7 @@ title: Fatal Error - Contact SP
 
 	<h1>The site you're logging into is broken. Let's fix that.</h1>
 	
-	<p>There's something wrong with Bansky Wallpaper's server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">Banksy Lab</a></strong>.</p>
+	<p>There's something wrong with Lambda Lab's Xen server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">Lambda Lab</a></strong>.</p>
 	
 	{% include fatal-report-form.html %}
 
