--- a/_ucla-logon-mocks/index.html
+++ b/_ucla-logon-mocks/index.html
@@ -3,3 +3,12 @@ title: Logon Form
 ---
 
 {% include ucla-sso-form.html %}
+
+<aside class="sp-support">
+	<h2>Lambda Labs Application Support</h2>
+
+	<ul>
+		<li>phone: (310) 208-0448</li>
+		<li>email: <a href="#">help@foo.ucla.edu</a></li>
+	</ul>
+</aside>
