http structure update

--- a/_ucla-logon-mocks/http-400.html
+++ b/_ucla-logon-mocks/http-400.html
@@ -2,16 +2,14 @@
 title: HTTP 400
 ---
 
-<div role="status" class="error">
+<article role="status">
+	
+	<div class="badge-error"><i class="fa fa-minus-circle"></i></div>
 
 	<h1>400 (bad request)</h1>
 	
 	<p>It appears the data you were expecting got mangled somewhere along the way.</p>
-
-</div>
-
-<article>
 	
-		<p>Try logging in with a new browser, or closing and re-opening this one. If the issue persists feel free to <a href="help.html">contact someone</a>.</p>
+	<p>Try logging in with a new browser, or closing and re-opening this one. If the issue persists feel free to <a href="help.html">contact someone</a>.</p>
 	
 </article>
