--- a/_ucla-logon-mocks/http-401.html
+++ b/_ucla-logon-mocks/http-401.html
@@ -2,16 +2,14 @@
 title: HTTP 401
 ---
 
-<div role="status" class="error">
+<article role="status">
+	
+	<div class="badge-error"><i class="fa fa-minus-circle"></i></div>
 
 	<h1>401 (unauthorized)</h1>
 	
 	<p>Something probably went wrong with your login attempt.</p>
-
-</div>
-
-<article>
 	
-		<p>Try logging in with a new browser, or closing and re-opening this one. If the issue persists feel free to <a href="help.html">contact someone</a>.</p>
+	<p>Try logging in with a new browser, or closing and re-opening this one. If the issue persists feel free to <a href="help.html">contact someone</a>.</p>
 	
 </article>
