--- a/_ucla-logon-mocks/http-403.html
+++ b/_ucla-logon-mocks/http-403.html
@@ -2,15 +2,13 @@
 title: HTTP 403
 ---
 
-<div role="status" class="error">
+<article role="status">
+	
+	<div class="badge-error"><i class="fa fa-minus-circle"></i></div>
 
 	<h1>403 (forbidden)</h1>
 	
 	<p>You aren't supposed to be here, or didn't sign-in first.</p>
-
-</div>
-
-<article>
 	
 	<p>Either sign-in (that's what we're here for), or try heading somewhere on the beaten track.</p>
 	
