--- a/_ucla-logon-mocks/http-404.html
+++ b/_ucla-logon-mocks/http-404.html
@@ -2,17 +2,15 @@
 title: HTTP 404
 ---
 
-<div role="status" class="error">
-
+<article role="status">
+	
+	<div class="badge-error"><i class="fa fa-minus-circle"></i></div>
+	
 	<h1>404 (not found)</h1>
 	
 	<p>You expected something to be here, and it wasn't.</p>
 	
 	<p>Don't you hate that?</p>
-
-</div>
-
-<article>
 	
 	<p>You either got here through a broken link, or mistyped where you were trying to go in the address bar. Double check what you typed, or if you're sure it's a broken link let someone know.</p>
 	
