--- a/_ucla-logon-mocks/http-500.html
+++ b/_ucla-logon-mocks/http-500.html
@@ -2,16 +2,14 @@
 title: HTTP 500
 ---
 
-<div role="status" class="error">
+<article role="status">
+	
+	<div class="badge-error"><i class="fa fa-minus-circle"></i></div>
 
 	<h1>500 (internal server error)</h1>
 	
 	<p>Something, internal, on a server, is in a state of error.</p>
 
-</div>
-
-<article>
-	
 	<p>Yeah, it's vague. Basically something is broken, and people are working to fix it. Check back in a bit!</p>
 	
 </article>
