badges easier to tweak consistently, new styling

--- a/_ucla-logon-mocks/alert-bookmarked-login.html
+++ b/_ucla-logon-mocks/alert-bookmarked-login.html
@@ -6,7 +6,7 @@ title: Alert - Bookmarked Login
 
 <article role="alert">
 	
-	<div class="badge-alert"><i class="fa fa-exclamation-triangle"></i></div>
+	{% include badge.html %}
 	
 	<h1>Don't bookmark this page!</h1>
 	
