--- a/_ucla-logon-mocks/alert-timeout.html
+++ b/_ucla-logon-mocks/alert-timeout.html
@@ -4,7 +4,7 @@ title: Alert - Timeout
 
 <article role="alert">
 	
-	<div class="badge-alert"><i class="fa fa-exclamation-triangle"></i></div>
+	{% include badge.html %}
 	
 	<h1>Your session ran out of time</h1>
 	
