--- a/_ucla-logon-mocks/http-401.html
+++ b/_ucla-logon-mocks/http-401.html
@@ -4,7 +4,7 @@ title: HTTP 401
 
 <article role="status">
 	
-	<div class="badge-error"><i class="fa fa-minus-circle"></i></div>
+	{% include badge.html %}
 
 	<h1>401 (unauthorized)</h1>
 	
