--- a/_ucla-logon-mocks/http-403.html
+++ b/_ucla-logon-mocks/http-403.html
@@ -4,7 +4,7 @@ title: HTTP 403
 
 <article role="status">
 	
-	<div class="badge-error"><i class="fa fa-minus-circle"></i></div>
+	{% include badge.html %}
 
 	<h1>403 (forbidden)</h1>
 	
