--- a/_ucla-logon-mocks/http-404.html
+++ b/_ucla-logon-mocks/http-404.html
@@ -4,7 +4,7 @@ title: HTTP 404
 
 <article role="status">
 	
-	<div class="badge-error"><i class="fa fa-minus-circle"></i></div>
+	{% include badge.html %}
 	
 	<h1>404 (not found)</h1>
 	
