--- a/_ucla-logon-mocks/fatal-error-contact-idp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-idp.html
@@ -4,7 +4,7 @@ title: Fatal Error - Contact IdP
 
 <article role="status">
 	
-	<div class="badge-alert"><i class="fa fa-exclamation-triangle"></i></div>
+	{% include badge.html %}
 	
 	<h1>The login server isn't working correctly. Let someone know.</h1>
 	
