--- a/_ucla-logon-mocks/http-400.html
+++ b/_ucla-logon-mocks/http-400.html
@@ -4,7 +4,7 @@ title: HTTP 400
 
 <article role="status">
 	
-	<div class="badge-error"><i class="fa fa-minus-circle"></i></div>
+	{% include badge.html %}
 
 	<h1>400 (bad request)</h1>
 	
