--- a/_ucla-logon-mocks/http-500.html
+++ b/_ucla-logon-mocks/http-500.html
@@ -4,7 +4,7 @@ title: HTTP 500
 
 <article role="status">
 	
-	<div class="badge-error"><i class="fa fa-minus-circle"></i></div>
+	{% include badge.html %}
 
 	<h1>500 (internal server error)</h1>
 	
