--- a/_ucla-logon-mocks/success-to-sp.html
+++ b/_ucla-logon-mocks/success-to-sp.html
@@ -3,7 +3,7 @@ title: Success - goto SP
 ---
 
 <article>
-	<h1>You Have Successfully Signed In</h1>
+	<h1>You Have Signed In</h1>
 	
 	<p class="loading"><i class="fa fa-circle-o-notch fa-spin"></i></p>
 	
