--- a/_ucla-logon-mocks/warning-slowdown.html
+++ b/_ucla-logon-mocks/warning-slowdown.html
@@ -2,12 +2,14 @@
 title: Warning, Login Attempts Slowed
 ---
 
-<div role="alert" class="error">
+<article>
+	
+	{% include badge.html %}
 
 	<h1>Login Attempts Slowed Down</h1>
 
 	<p>We've noticed that there have been more than a few login attempts on this account recently. The simplest thing to do is to <a href="#">go request a password reset</a>, but you can keep on trying if you really want to!</p>
 	
-	<h1>4:42 remaining</h1>
+	<h2 class="error-box">4:42 remaining</h2>
 
-</div>
+</article>
