a few more medcenter tweaks

--- a/_medcenter-mocks/logon-base-with-ucla.html
+++ b/_medcenter-mocks/logon-base-with-ucla.html
@@ -1,10 +1,10 @@
 ---
-title: Logon Form w/ Medcenter Login
+title: Logon Form w/ UCLA Logon ID Login
 ---
 
 {% include health-sso-form.html %}
 
-<a href="#" class="button secondary-button">Sign In with your Med Center ID</a>
+<a href="#" class="button secondary-button">Sign In with your UCLA Logon ID</a>
 
 <aside class="sp-support">
 	<h2>Lambda Labs Application Support</h2>
