rm tone from medcenter mocks

--- a/_medcenter-mocks/alert-retry.html
+++ b/_medcenter-mocks/alert-retry.html
@@ -6,9 +6,9 @@ title: Alert - Retry Sign-on Process
 	
 	<h1>Retry the sign-in process</h1>
 	
-	<p>It looks like there might have been a hiccup in the system.</p>
+	<p>It looks like there was a hiccup in the system.</p>
 	
-	<h2>Try the following steps</h2>
+	<h2>Try the following steps:</h2>
 	
 	<ol>
 		<li>Try logging back in from the application you started from.</li>
