--- a/_medcenter-mocks/success-to-idp.html
+++ b/_medcenter-mocks/success-to-idp.html
@@ -7,5 +7,5 @@ title: Success - goto IdP
 	
 	<p class="loading"><i class="fa fa-circle-o-notch fa-spin"></i></p>
 	
-	<p>It might take a few seconds to redirect you to the site you're logging into. Hang in there!</p>
+	<p>It might take a few seconds to redirect you to the site you're logging into.</p>
 </article>
