--- a/_medcenter-mocks/alert-timeout.html
+++ b/_medcenter-mocks/alert-timeout.html
@@ -6,8 +6,6 @@ title: Alert - Timeout
 	
 	<h1>Your session ran out of time</h1>
 	
-	<p>You waited just a <em>little</em> too long to start logging in. I'm sure that was a great cup of coffee though.</p>
-	
-	<p>Hey, it's not a problem! Just <a href="{{site.baseurl}}/medcenter-mocks/">go and login</a> a little faster this time.</p>
+	<p>You waited just a <em>little</em> too long to start logging in, please go back and <a href="{{site.baseurl}}/medcenter-mocks/">start the login process</a> again.</p>
 
 </article>
