--- a/_ucla-logon-mocks/alert-timeout.html
+++ b/_ucla-logon-mocks/alert-timeout.html
@@ -10,6 +10,6 @@ title: Alert - Timeout
 	
 	<p>You waited just a <em>little</em> too long to start logging in. I'm sure that was a great cup of coffee though.</p>
 	
-	<p>Hey, it's not a problem! Just <a href="{{site.baseurl}}/ucla-logon-mocks/">go and login</a> a little faster this time.</p>
+	<p>Hey, it's not a problem! Just <a href="{{site.baseurl}}/ucla-logon-mocks/">go login</a> a little faster this time.</p>
 
 </article>
