--- a/_ucla-logon-mocks/alert-bookmarked-login.html
+++ b/_ucla-logon-mocks/alert-bookmarked-login.html
@@ -8,6 +8,6 @@ title: Alert - Bookmarked Login
 	
 	<h1>Don't bookmark this page!</h1>
 	
-	<p>You can not bookmark the sign-in page - <strong>bookmark the site you want to get to</strong> and then sign in from there. UCLA Single-Sign On is a multi-step process, and you can't just skip to the middle of it. Good initiative though!</p>
+	<p>You can not bookmark the sign-in page - you have to start the login process from the resource you're trying to reach each time. UCLA Single-Sign On is a multi-step process, and you can't just skip to the middle of it. Good initiative though!</p>
 	
 </article>
