--- a/_ucla-logon-mocks/alert-retry.html
+++ b/_ucla-logon-mocks/alert-retry.html
@@ -6,7 +6,7 @@ title: Alert - Retry Sign-on Process
 	
 	{% include badge.html %}
 	
-	<h1>Retry the sign-in process</h1>
+	<h1>Retry the sign-in process.</h1>
 	
 	<p>It looks like there was a hiccup in the system.</p>
 	
