make login fail a bit more prominent, hl

--- a/_ucla-logon-mocks/logon-base-with-custom-sp.html
+++ b/_ucla-logon-mocks/logon-base-with-custom-sp.html
@@ -13,6 +13,6 @@ title: Logon Form w/ Custom SP News
 
 	<ul>
 		<li>phone: (310) 208-0448</li>
-		<li>email: <a href="#">help@foo.ucla.edu</a></li>
+		<li>email: <a href="#">foo@bar.ucla.edu</a></li>
 	</ul>
 </aside>
