--- a/_ucla-logon-mocks/logon-base-with-medcenter.html
+++ b/_ucla-logon-mocks/logon-base-with-medcenter.html
@@ -11,6 +11,6 @@ title: Logon Form w/ Medcenter Login
 
 	<ul>
 		<li>phone: (310) 208-0448</li>
-		<li>email: <a href="#">help@foo.ucla.edu</a></li>
+		<li>email: <a href="#">gordon@ucla.edu</a></li>
 	</ul>
 </aside>
