--- a/_ucla-logon-mocks/logon-fail.html
+++ b/_ucla-logon-mocks/logon-fail.html
@@ -9,6 +9,6 @@ title: Logon Form w/ Failed Login
 
 	<ul>
 		<li>phone: (310) 208-0448</li>
-		<li>email: <a href="#">help@foo.ucla.edu</a></li>
+		<li>email: <a href="#">gordon@ucla.edu</a></li>
 	</ul>
 </aside>
