sp support message, new treatment of secondary login

--- a/_ucla-logon-mocks/logon-base-with-medcenter.html
+++ b/_ucla-logon-mocks/logon-base-with-medcenter.html
@@ -2,12 +2,12 @@
 title: Logon Form w/ Medcenter Login
 ---
 
-{% include ucla-sso-form.html %}
-
-<a href="#" class="button secondary-button">Sign In with your Med Center ID</a>
+{% include ucla-sso-form-secondary.html %}
 
 <aside class="sp-support">
-	<h2>Lambda Labs Application Support</h2>
+	<h2>You're Signing Into Lambda Labs</h2>
+	
+	<p>If you're having general issues signing in, please read our <a href="#">FAQ</a>. For issues specific to Lambda Labs, use the contact information below:</p>
 
 	<ul>
 		<li>phone: (310) 208-0448</li>
