--- a/_ucla-logon-mocks/index.html
+++ b/_ucla-logon-mocks/index.html
@@ -5,7 +5,9 @@ title: Logon Form
 {% include ucla-sso-form.html %}
 
 <aside class="sp-support">
-	<h2>Lambda Labs Application Support</h2>
+	<h2>You're Signing Into Lambda Labs</h2>
+	
+	<p>If you're having general issues signing in, please read our <a href="#">FAQ</a>. For issues specific to Lambda Labs, use the contact information below:</p>
 
 	<ul>
 		<li>phone: (310) 208-0448</li>
