badge tweaks, sp-support = include, medcenter

--- a/_medcenter-mocks/logon-base-with-ucla.html
+++ b/_medcenter-mocks/logon-base-with-ucla.html
@@ -6,11 +6,4 @@ title: Logon Form w/ UCLA Logon ID Login
 
 <a href="#" class="button secondary-button">Sign In with your UCLA Logon ID</a>
 
-<aside class="sp-support">
-	<h2>Lambda Labs Application Support</h2>
-
-	<ul>
-		<li>phone: (310) 208-0448</li>
-		<li>email: <a href="#">help@foo.ucla.edu</a></li>
-	</ul>
-</aside>
+{% include default-sp-support.html %}
