--- a/_medcenter-mocks/logon-fail.html
+++ b/_medcenter-mocks/logon-fail.html
@@ -4,11 +4,4 @@ title: Logon Form w/ Failed Login
 
 {% include health-sso-form-fail.html %}
 
-<aside class="sp-support">
-	<h2>Lambda Labs Application Support</h2>
-
-	<ul>
-		<li>phone: (310) 208-0448</li>
-		<li>email: <a href="#">help@foo.ucla.edu</a></li>
-	</ul>
-</aside>
+{% include default-sp-support.html %}
