--- a/_ucla-logon-mocks/logon-base-with-medcenter.html
+++ b/_ucla-logon-mocks/logon-base-with-medcenter.html
@@ -4,13 +4,4 @@ title: Logon Form w/ Medcenter Login
 
 {% include ucla-sso-form-secondary.html %}
 
-<aside class="sp-support">
-	<h2>You're Signing Into Lambda Labs</h2>
-	
-	<p>If you're having general issues signing in, please read our <a href="#">FAQ</a>. For issues specific to Lambda Labs, use the contact information below:</p>
-
-	<ul>
-		<li>phone: (310) 208-0448</li>
-		<li>email: <a href="#">gordon@ucla.edu</a></li>
-	</ul>
-</aside>
+{% include default-sp-support.html %}
