mostly wording tweaks

--- a/_as-app-mocks/index.html
+++ b/_as-app-mocks/index.html
@@ -4,4 +4,4 @@ title: Logon Form
 
 {% include as-app-sso-form.html %}
 
-{% include default-sp-support.html %}
+{% include as-app-sp-support.html %}
