--- a/_medcenter-mocks/logon-base-with-ucla.html
+++ b/_medcenter-mocks/logon-base-with-ucla.html
@@ -1,9 +1,7 @@
 ---
-title: Logon Form w/ UCLA Logon ID Login
+title: Logon Form w/ UCLA Login
 ---
 
-{% include health-sso-form.html %}
-
-<a href="#" class="button secondary-button">Sign In with your UCLA Logon ID</a>
+{% include health-sso-form-secondary.html %}
 
 {% include default-sp-support.html %}
