--- a/_ucla-logon-mocks/warning-slowdown.html
+++ b/_ucla-logon-mocks/warning-slowdown.html
@@ -10,6 +10,6 @@ title: Warning, Login Attempts Slowed
 
 	<p>We've noticed that there have been more than a few login attempts on this account recently. The simplest thing to do is to <a href="#">go request a password reset</a>, but you can keep on trying if you really want to!</p>
 	
-	<h2 class="error-box"><span id="countdown"></span> remaining</h2>
+	<h2 class="error-box"><span id="countdown"></span> until account unlocked</h2>
 
 </article>
