--- a/_ucla-logon-mocks/logon-base-with-custom-sp.html
+++ b/_ucla-logon-mocks/logon-base-with-custom-sp.html
@@ -11,6 +11,9 @@ title: Logon Form w/ Custom SP News
 	
 	 <p>If you're getting an error after a successful login your Logon ID might <a href="http://kb.ucla.edu/articles/moodle-needs-certain-shibboleth-attributes">not be working properly.</a></p>
 
-		<p><strong>phone:</strong> (310) 208-0448<br>
-		<strong>email:</strong> <a href="#">gordon@ucla.edu</a></p>
+	<ul>
+		<li>phone: (310) 208-0448</li>
+		<li>email: <a href="#">gordon@ucla.edu</li>
+  </ul>
+  
 </aside>
