error page styling, misc cleanup

--- a/_ucla-logon-mocks/http-400.html
+++ b/_ucla-logon-mocks/http-400.html
@@ -6,7 +6,7 @@ title: HTTP 400
 	
 	{% include badge.html %}
 
-	<h1>400 (bad request)</h1>
+	<h1 class="error-title">400 (bad request)</h1>
 	
 	<p>It appears the data you were expecting got mangled somewhere along the way.</p>
 	
