--- a/_ucla-logon-mocks/http-401.html
+++ b/_ucla-logon-mocks/http-401.html
@@ -6,7 +6,7 @@ title: HTTP 401
 	
 	{% include badge.html %}
 
-	<h1>401 (unauthorized)</h1>
+	<h1 class="error-title">401 (unauthorized)</h1>
 	
 	<p>Something probably went wrong with your login attempt.</p>
 	
