--- a/_ucla-logon-mocks/http-403.html
+++ b/_ucla-logon-mocks/http-403.html
@@ -6,7 +6,7 @@ title: HTTP 403
 	
 	{% include badge.html %}
 
-	<h1>403 (forbidden)</h1>
+	<h1 class="error-title">403 (forbidden)</h1>
 	
 	<p>You aren't supposed to be here, or didn't sign-in first.</p>
 	
