--- a/_ucla-logon-mocks/http-500.html
+++ b/_ucla-logon-mocks/http-500.html
@@ -6,7 +6,7 @@ title: HTTP 500
 	
 	{% include badge.html %}
 
-	<h1>500 (internal server error)</h1>
+	<h1 class="error-title">500 (internal server error)</h1>
 	
 	<p>Something, internal, on a server, is in a state of error.</p>
 
