--- a/_ucla-logon-mocks/fatal-error-contact-idp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-idp.html
@@ -6,7 +6,7 @@ title: Fatal Error - Contact IdP
 	
 	{% include badge.html %}
 	
-	<h1>The login server isn't working correctly. Let someone know.</h1>
+	<h1 class="error-title">The login server isn't working correctly. Let someone know.</h1>
 	
 	<p>There's something wrong with the UCLA Login Server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">IAMUCLA</a></strong>.</p>
 	
