--- a/_ucla-logon-mocks/fatal-error-contact-sp.html
+++ b/_ucla-logon-mocks/fatal-error-contact-sp.html
@@ -6,7 +6,7 @@ title: Fatal Error - Contact SP
 	
 	{% include badge.html %}
 
-	<h1>The site isn't accepting your sign-in. Let someone know.</h1>
+	<h1 class="error-title">The site isn't accepting your sign-in. Let someone know.</h1>
 	
 	<p>There's something wrong with Lambda Lab's Xen server. In order to get help get it running correctly, please fill out the report below and send it off to the fine folks at <strong><a href="#">Lambda Lab</a></strong>.</p>
 	
