--- a/_ucla-logon-mocks/http-404.html
+++ b/_ucla-logon-mocks/http-404.html
@@ -6,7 +6,7 @@ title: HTTP 404
 	
 	{% include badge.html %}
 	
-	<h1>404 (not found)</h1>
+	<h1 class="error-title">404 (not found)</h1>
 	
 	<p>You expected something to be here, and it wasn't.</p>
 	
